--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,10 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Project Pythia Cookbook Template
+title: EOFs Cookbook
 author: the <a href="https://projectpythia.org/">Project Pythia</a> Community
 logo: notebooks/images/logos/pythia_logo-white-rtext.svg
-email: projectpythia@ucar.edu
 copyright: "2023"
-
-description: A sample cookbook description.
-thumbnail: thumbnail.png
-tags:
-  domains:
-    - sampledomain
-  packages:
-    - samplepackage
 
 execute:
   # To execute notebooks via a Binder instead, replace 'cache' with 'binder'
@@ -44,7 +35,7 @@ sphinx:
     html_permalinks_icon: '<i class="fas fa-link"></i>'
     html_theme_options:
       home_page_in_toc: true
-      repository_url: https://github.com/ProjectPythia/cookbook-template/ # Online location of your book
+      repository_url: https://github.com/ProjectPythia/eofs-cookbook/ # Online location of your book
       repository_branch: main # Which branch of the repository should be used when creating links (optional)
       use_issues_button: true
       use_repository_button: true
