add pythia config

--- a/myst.yml
+++ b/myst.yml
@@ -1,5 +1,7 @@
 # See docs at: https://mystmd.org/guide/frontmatter
 version: 1
+extends:
+  - https://raw.githubusercontent.com/projectpythia-mystmd/pythia-config/main/pythia.yml
 project:
   id: e8285412-8d71-4ea9-9e66-75f823ad5818
   # title:
