--- a/myst.yml
+++ b/myst.yml
@@ -8,7 +8,7 @@ project:
   # description:
   # keywords: []
   authors: Project Pythia Community
-  biblio: references.bib
+  #biblio: references.bib
   github: https://github.com/projectpythia-mystmd/eofs-cookbook
   # To autogenerate a Table of Contents, run "myst init --write-toc"
   toc:
