add jupyter bit to config

--- a/myst.yml
+++ b/myst.yml
@@ -20,7 +20,9 @@ project:
       children:
         - file: notebooks/eof-intro.ipynb
         - file: notebooks/climate-modes-xeofs.ipynb
-    
+  jupyter:
+      binder:
+        repo: projectpythia-mystmd/eofs-cookbook    
 site:
   template: book-theme
   # options:
