Update to new xeofs version

--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: eofs-cookbook-dev
 channels:
   - conda-forge
 dependencies:
+  - python
   - jupyter-book
   - jupyterlab
   - jupyter_server
@@ -20,4 +21,3 @@ dependencies:
   - cftime
   - pydap
   - sphinx-pythia-theme
-  - xeofs
