--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,8 @@ channels:
   - conda-forge
 dependencies:
   - python
-  - jupyter-book
-  - jupyterlab
   - jupyter_server
+  - ipykernel
   - numpy
   - xarray
   - matplotlib
@@ -21,4 +20,3 @@ dependencies:
   - mystmd
   - cftime
   - pydap
-  - sphinx-pythia-theme
